--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/bull": "^0.3.1",
     "@nestjs/common": "^7.5.1",
     "@nestjs/config": "^0.6.1",
     "@nestjs/core": "^7.5.1",
@@ -31,26 +32,37 @@
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/typeorm": "^7.1.5",
     "apollo-server-express": "^2.19.0",
+    "bull": "^3.20.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
+    "docxtemplater": "^3.19.9",
     "graphql": "^15.4.0",
     "graphql-tools": "^7.0.2",
+    "graphql-type-json": "^0.3.2",
     "lodash": "^4.17.20",
+    "luxon": "^1.25.0",
     "pg": "^8.5.1",
+    "pizzip": "^3.0.6",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3",
-    "typeorm": "^0.2.29"
+    "tmp": "^0.2.1",
+    "typeorm": "^0.2.29",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.1",
     "@nestjs/schematics": "^7.1.3",
     "@nestjs/testing": "^7.5.1",
-    "@types/express": "^4.17.8",
+    "@types/bull": "^3.15.0",
+    "@types/express": "^4.17.9",
     "@types/jest": "^26.0.15",
     "@types/lodash": "^4.14.165",
+    "@types/luxon": "^1.25.1",
     "@types/node": "^14.14.6",
     "@types/supertest": "^2.0.10",
+    "@types/tmp": "^0.2.0",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
     "eslint": "^7.12.1",
