--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@types/lodash": "^4.14.165",
     "@types/luxon": "^1.25.1",
     "@types/node": "^14.14.6",
+    "@types/rimraf": "^3.0.0",
     "@types/supertest": "^2.0.10",
     "@types/tmp": "^0.2.0",
     "@types/uuid": "^8.3.0",
