--- a/package.json
+++ b/package.json
@@ -5,9 +5,6 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
-  "engines": {
-    "node": ">=12"
-  },
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
@@ -25,59 +22,56 @@
   },
   "dependencies": {
     "@nestjs/bull": "^0.3.1",
-    "@nestjs/common": "^7.5.1",
-    "@nestjs/config": "^0.6.1",
-    "@nestjs/core": "^7.5.1",
-    "@nestjs/graphql": "^7.9.0",
-    "@nestjs/platform-express": "^7.5.1",
+    "@nestjs/common": "^7.6.15",
+    "@nestjs/config": "^0.6.3",
+    "@nestjs/core": "^7.6.15",
+    "@nestjs/graphql": "^7.11.0",
+    "@nestjs/mapped-types": "*",
+    "@nestjs/platform-express": "^7.6.15",
     "@nestjs/typeorm": "^7.1.5",
-    "apollo-server-express": "^2.19.0",
-    "bull": "^3.20.0",
-    "class-transformer": "^0.3.1",
-    "class-validator": "^0.12.2",
-    "docxtemplater": "^3.19.9",
-    "graphql": "^15.4.0",
-    "graphql-tools": "^7.0.2",
+    "apollo-server-express": "^2.25.2",
+    "docxtemplater": "^3.22.2",
     "graphql-type-json": "^0.3.2",
-    "lodash": "^4.17.20",
-    "luxon": "^1.25.0",
-    "pg": "^8.5.1",
+    "graphql-upload": "^12.0.0",
+    "lodash": "^4.17.21",
+    "luxon": "^1.27.0",
+    "pg": "^8.6.0",
     "pizzip": "^3.0.6",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.3",
+    "rxjs": "^6.6.6",
     "tmp": "^0.2.1",
-    "typeorm": "^0.2.29",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@compodoc/compodoc": "^1.1.11",
-    "@nestjs/cli": "^7.5.1",
-    "@nestjs/schematics": "^7.1.3",
-    "@nestjs/testing": "^7.5.1",
-    "@types/bull": "^3.15.0",
-    "@types/express": "^4.17.9",
-    "@types/jest": "^26.0.15",
-    "@types/lodash": "^4.14.165",
-    "@types/luxon": "^1.25.1",
-    "@types/node": "^14.14.6",
+    "@nestjs/cli": "^7.6.0",
+    "@nestjs/schematics": "^7.3.0",
+    "@nestjs/testing": "^7.6.15",
+    "@types/bull": "^3.15.1",
+    "@types/express": "^4.17.11",
+    "@types/graphql-upload": "^8.0.5",
+    "@types/jest": "^26.0.22",
+    "@types/lodash": "^4.14.170",
+    "@types/luxon": "^1.27.0",
+    "@types/node": "^14.14.36",
     "@types/rimraf": "^3.0.0",
     "@types/supertest": "^2.0.10",
     "@types/tmp": "^0.2.0",
     "@types/uuid": "^8.3.0",
-    "@typescript-eslint/eslint-plugin": "^4.6.1",
-    "@typescript-eslint/parser": "^4.6.1",
-    "eslint": "^7.12.1",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.1.4",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
+    "eslint": "^7.22.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "jest": "^26.6.3",
-    "prettier": "^2.1.2",
-    "supertest": "^6.0.0",
-    "ts-jest": "^26.4.3",
-    "ts-loader": "^8.0.8",
-    "ts-node": "^9.0.0",
+    "prettier": "^2.2.1",
+    "supertest": "^6.1.3",
+    "ts-jest": "^26.5.4",
+    "ts-loader": "^8.0.18",
+    "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.0.5"
+    "typescript": "^4.2.3"
   },
   "jest": {
     "moduleFileExtensions": [
