--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@bull-board/express": "^3.3.0",
     "@nestjs/bull": "^0.3.1",
     "@nestjs/common": "^7.6.15",
     "@nestjs/config": "^0.6.3",
@@ -30,6 +31,7 @@
     "@nestjs/platform-express": "^7.6.15",
     "@nestjs/typeorm": "^7.1.5",
     "apollo-server-express": "^2.25.2",
+    "bull-board": "^2.1.3",
     "docxtemplater": "^3.22.2",
     "graphql-type-json": "^0.3.2",
     "graphql-upload": "^12.0.0",
