--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/graphql": "^7.11.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^7.6.15",
+    "@nestjs/serve-static": "^2.1.4",
     "@nestjs/typeorm": "^7.1.5",
     "apollo-server-express": "^2.25.2",
     "bull-board": "^2.1.3",
