--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -6,10 +6,10 @@ spec:
   rules:
   - http:
       paths:
-      - path: /
+      - path: /api
         pathType: Prefix
         backend:
           service:
             name: print-service-cluster-ip
             port:
-              number: 3000
+              number: 4000
